# FlagWarden

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/bot/: __init__.py  flow.py  telegram_adapter.py  whatsapp_adapter.py
app/core/: __init__.py  content.py  quiz_engine.py  safety.py  scoring.py
app/db/: __init__.py  models.py  repository.py
app/services/: llm_adapter.py
assets/logo/: README.md
data/: challenges.json
docs/: manual-qa-checklist.md
docs/demo/: README.md  demo-script.md  linkedin-post-draft.md
docs/screenshots/: README.md
scripts/: generate_logo.py  make_demo_gif.py
tests/: conftest.py  test_config.py  test_content.py  test_flow.py  test_main.py  test_quiz_engine.py  test_repository.py  test_safety.py  test_scoring.py  test_telegram_adapter.py  test_whatsapp_adapter.py
